# projectPlatformer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  collider.cpp  collider.hpp  crib.cpp  crib.hpp  door.cpp  door.hpp  loadLevel.cpp  loadLevel.hpp  main.cpp  object.cpp  object.hpp  orc.cpp  orc.hpp  player.cpp  player.hpp  playerInteractableObjects.cpp  playerInteractableObjects.hpp  sdlWrapper.cpp  sdlWrapper.hpp
assets/levels/: debuglevel.lvl  levels.lst  test1.lvl  test2.lvl
pikoImages/: Player_Idle.piko
